Fix sidebar position and mount

--- a/css/assistantSidebar.css
+++ b/css/assistantSidebar.css
@@ -3,7 +3,7 @@
   width: var(--assistant-sidebar-width, 300px);
   min-width: 0;
   position: fixed;
-  top: 0;
+  top: calc(36px + var(--control-space-top));
   right: 0;
   bottom: 0;
   display: none;
