--- a/css/assistantPanel.css
+++ b/css/assistantPanel.css
@@ -2,11 +2,20 @@
   position: absolute;
   top: calc(36px + var(--control-space-top));
   right: 0;
-  width: 300px;
+  width: var(--assistant-panel-width, 300px);
   bottom: 0;
   background: red;
   display: none;
   z-index: 3;
+}
+
+#assistant-panel-resizer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 4px;
+  cursor: ew-resize;
 }
 
 body.assistant-panel-visible #assistant-panel {
