style: ensure assistant button appears

--- a/css/tabBar.css
+++ b/css/tabBar.css
@@ -310,6 +310,11 @@ body.windows.dark-theme .navbar-action-button:not(:disabled):hover {
   width: 36px;
   font-size: 1.6em !important;
 }
+.navbar-right-actions #assistant-button {
+  padding: 0;
+  width: 36px;
+  font-size: 1.6em !important;
+}
 
 /* audio button */
 .tab-item .tab-audio-button {
